# mobile-speaker-driver

./: .gitignore  CMakeLists.txt  build.bat  build.sh
apps/: main.cpp
include/msd/: AudioDriver.h  AudioDriverAbstract.h  AudioDriverLinux.h  AudioDriverWindows.h  Connectable.h  WifiConnector.h
src/: AudioDriver.cpp  AudioDriverLinux.cpp  AudioDriverWindows.cpp  WifiConnector.cpp
tests/: AudioDriverTest.cpp  CMakeLists.txt
